Adicionado controller para demais rotas e atualizada documentação.
